{
  "version": 4,
  "terraform_version": "1.5.1",
  "serial": 302,
  "lineage": "dc435b82-772d-16c9-d340-1f9307a4d56c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "mumbai-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f5ee92e2d63afc18",
            "arn": "arn:aws:ec2:ap-south-1:424887589804:instance/i-01242da496666e337",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01242da496666e337",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mumbai-26-june",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09f6027759002c5dd",
            "private_dns": "ip-10-0-0-146.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.146",
            "public_ip": "13.126.129.60",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02f2b94e1ae3113c2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0219909496dde7655",
            "tags": {
              "Name": "terraform-mumbai"
            },
            "tags_all": {
              "Name": "terraform-mumbai"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05a4176061051ef40"
            ]
          },
          "dependencies": [
            "aws_key_pair.mumbai-keypair",
            "aws_security_group.mumbai_SG_allow_ssh_http",
            "aws_subnet.mumbai-subnet-1a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "mumbai-instance-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f5ee92e2d63afc18",
            "arn": "arn:aws:ec2:ap-south-1:424887589804:instance/i-0a87cfb07c4ff419d",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a87cfb07c4ff419d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mumbai-26-june",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0fa795a8100c329ba",
            "private_dns": "ip-10-0-0-71.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.71",
            "public_ip": "43.205.178.127",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02c4ec5c7135a7692",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0219909496dde7655",
            "tags": {
              "Name": "terraform-mumbai-2"
            },
            "tags_all": {
              "Name": "terraform-mumbai-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05a4176061051ef40"
            ]
          },
          "dependencies": [
            "aws_key_pair.mumbai-keypair",
            "aws_security_group.mumbai_SG_allow_ssh_http",
            "aws_subnet.mumbai-subnet-1a",
            "aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "mumbai_GW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:424887589804:internet-gateway/igw-097ad8a99efb2c604",
            "id": "igw-097ad8a99efb2c604",
            "owner_id": "424887589804",
            "tags": {
              "Name": "mumbai-IG"
            },
            "tags_all": {
              "Name": "mumbai-IG"
            },
            "vpc_id": "vpc-035072a9fafdb217c"
          },
          "dependencies": [
            "aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "mumbai-load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:424887589804:loadbalancer/app/cardwebsite-LB-terraform/615fe8504720bcb3",
            "arn_suffix": "app/cardwebsite-LB-terraform/615fe8504720bcb3",
            "desync_mitigation_mode": "defensive",
            "dns_name": "cardwebsite-LB-terraform-1600607281.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:424887589804:loadbalancer/app/cardwebsite-LB-terraform/615fe8504720bcb3",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "cardwebsite-LB-terraform",
            "preserve_host_header": false,
            "security_groups": [
              "sg-05a4176061051ef40"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0219909496dde7655"
              },
              {
                "subnet_id": "subnet-0acb3b99b5caf0065"
              }
            ],
            "subnets": [
              "subnet-0219909496dde7655",
              "subnet-0acb3b99b5caf0065"
            ],
            "tags": {
              "Environment": "production"
            },
            "tags_all": {
              "Environment": "production"
            },
            "vpc_id": "vpc-035072a9fafdb217c",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_security_group.mumbai_SG_allow_ssh_http",
            "aws_subnet.mumbai-subnet-1a",
            "aws_subnet.mumbai-subnet-1b",
            "aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "mumbai-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:424887589804:listener/app/cardwebsite-LB-terraform/615fe8504720bcb3/beceb6c4d64c4393",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:424887589804:targetgroup/cardwebsite-terraform/6724359858748bcc",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:424887589804:listener/app/cardwebsite-LB-terraform/615fe8504720bcb3/beceb6c4d64c4393",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:424887589804:loadbalancer/app/cardwebsite-LB-terraform/615fe8504720bcb3",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.mumbai-load_balancer",
            "aws_lb_target_group.mumbai-TG",
            "aws_security_group.mumbai_SG_allow_ssh_http",
            "aws_subnet.mumbai-subnet-1a",
            "aws_subnet.mumbai-subnet-1b",
            "aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "mumbai-TG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:424887589804:targetgroup/cardwebsite-terraform/6724359858748bcc",
            "arn_suffix": "targetgroup/cardwebsite-terraform/6724359858748bcc",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:424887589804:targetgroup/cardwebsite-terraform/6724359858748bcc",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "cardwebsite-terraform",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-035072a9fafdb217c"
          },
          "dependencies": [
            "aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "mumbai-TG-attachment-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:424887589804:targetgroup/cardwebsite-terraform/6724359858748bcc-20230703061735770200000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:424887589804:targetgroup/cardwebsite-terraform/6724359858748bcc",
            "target_id": "i-01242da496666e337"
          },
          "dependencies": [
            "aws_instance.mumbai-instance",
            "aws_key_pair.mumbai-keypair",
            "aws_lb_target_group.mumbai-TG",
            "aws_security_group.mumbai_SG_allow_ssh_http",
            "aws_subnet.mumbai-subnet-1a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "mumbai-TG-attachment-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:424887589804:targetgroup/cardwebsite-terraform/6724359858748bcc-20230703061110473900000005",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:424887589804:targetgroup/cardwebsite-terraform/6724359858748bcc",
            "target_id": "i-0a87cfb07c4ff419d"
          },
          "dependencies": [
            "aws_instance.mumbai-instance-2",
            "aws_key_pair.mumbai-keypair",
            "aws_lb_target_group.mumbai-TG",
            "aws_security_group.mumbai_SG_allow_ssh_http",
            "aws_subnet.mumbai-subnet-1a",
            "aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "mumbai-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:424887589804:route-table/rtb-02f9b668db1169472",
            "id": "rtb-02f9b668db1169472",
            "owner_id": "424887589804",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-097ad8a99efb2c604",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mumbai-RT"
            },
            "tags_all": {
              "Name": "mumbai-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-035072a9fafdb217c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.mumbai_GW",
            "aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "mumbai-RT-assocaition-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02c6c876e33375e44",
            "route_table_id": "rtb-02f9b668db1169472",
            "subnet_id": "subnet-0acb3b99b5caf0065"
          },
          "dependencies": [
            "aws_internet_gateway.mumbai_GW",
            "aws_route_table.mumbai-RT",
            "aws_subnet.mumbai-subnet-1b",
            "aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "mumbai-RT-association-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-030c50820193a8fdf",
            "route_table_id": "rtb-02f9b668db1169472",
            "subnet_id": "subnet-0219909496dde7655"
          },
          "dependencies": [
            "aws_internet_gateway.mumbai_GW",
            "aws_route_table.mumbai-RT",
            "aws_subnet.mumbai-subnet-1a",
            "aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mumbai_SG_allow_ssh_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:424887589804:security-group/sg-05a4176061051ef40",
            "description": "Allow SSH and HTTP inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05a4176061051ef40",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from PC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from PC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh_http",
            "name_prefix": "",
            "owner_id": "424887589804",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_tls"
            },
            "tags_all": {
              "Name": "allow_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-035072a9fafdb217c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mumbai-subnet-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:424887589804:subnet/subnet-0219909496dde7655",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0219909496dde7655",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "424887589804",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Mumbai-subnet-1a"
            },
            "tags_all": {
              "Name": "Mumbai-subnet-1a"
            },
            "vpc_id": "vpc-035072a9fafdb217c"
          },
          "dependencies": [
            "aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mumbai-subnet-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:424887589804:subnet/subnet-0acb3b99b5caf0065",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0acb3b99b5caf0065",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "424887589804",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Mumbai-subnet-1b"
            },
            "tags_all": {
              "Name": "Mumbai-subnet-1b"
            },
            "vpc_id": "vpc-035072a9fafdb217c"
          },
          "dependencies": [
            "aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mumbai-subnet-1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:424887589804:subnet/subnet-07467535bcdfadd17",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07467535bcdfadd17",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "424887589804",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Mumbai-subnet-1c"
            },
            "tags_all": {
              "Name": "Mumbai-subnet-1c"
            },
            "vpc_id": "vpc-035072a9fafdb217c"
          },
          "dependencies": [
            "aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "demo-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:424887589804:vpc/vpc-035072a9fafdb217c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0630098c42bdb27a2",
            "default_route_table_id": "rtb-0c33e529c0e786791",
            "default_security_group_id": "sg-047139931a251d9e0",
            "dhcp_options_id": "dopt-09c5e784875fe2728",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-035072a9fafdb217c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c33e529c0e786791",
            "owner_id": "424887589804",
            "tags": {
              "Name": "mumbai-VPC"
            },
            "tags_all": {
              "Name": "mumbai-VPC"
            }
          }
        }
      ]
    }
  ]
}